--- a/packages/core/src/ray-exports.scss
+++ b/packages/core/src/ray-exports.scss
@@ -27,6 +27,7 @@
 
   ray-color-white: $ray-color-white;
   ray-color-black: $ray-color-black;
+  ray-color-blue-03: $ray-color-blue-03;
   ray-color-blue-10: $ray-color-blue-10;
   ray-color-blue-20: $ray-color-blue-20;
   ray-color-blue-50: $ray-color-blue-50;
@@ -46,6 +47,7 @@
   ray-color-gray-03: $ray-color-gray-03;
   ray-color-gray-10: $ray-color-gray-10;
   ray-color-gray-30: $ray-color-gray-30;
+  ray-color-gray-31: $ray-color-gray-31;
   ray-color-gray-50: $ray-color-gray-50;
   ray-color-gray-60: $ray-color-gray-60;
 }
