--- a/packages/core/src/global/_colors.scss
+++ b/packages/core/src/global/_colors.scss
@@ -1,6 +1,7 @@
 $ray-color-white: #ffffff;
 $ray-color-black: #000000;
 
+$ray-color-blue-03: hsl(240, 100%, 100% - 03%);
 $ray-color-blue-10: hsl(240, 100%, 100% - 10%);
 $ray-color-blue-20: hsl(240, 100%, 100% - 20%);
 $ray-color-blue-50: hsl(240, 100%, 100% - 50%);
@@ -24,5 +25,6 @@ $ray-color-green-90: hsl(132, 76%, 100% - 90%);
 $ray-color-gray-03: hsl(0, 0%, 100% - 03%);
 $ray-color-gray-10: hsl(0, 0%, 100% - 11%);
 $ray-color-gray-30: hsl(0, 0%, 100% - 30%);
+$ray-color-gray-31: hsl(0, 0%, 100% - 31%);
 $ray-color-gray-50: hsl(0, 0%, 100% - 50%);
 $ray-color-gray-60: hsl(0, 0%, 100% - 60%);
